traversal.snake.Snake.scala.error
Compilation error:
Snake:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:11: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return false
                     ^Snake:16: warning: enclosing method positionFinale has result type Unit: return value discarded
              return false
              ^Snake:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                return true
                       ^Snake:24: warning: enclosing method positionFinale has result type Unit: return value discarded
                return true
                ^Snake:29: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                  return false
                         ^Snake:29: warning: enclosing method positionFinale has result type Unit: return value discarded
                  return false
                  ^Snake:35: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:35: warning: enclosing method positionFinale has result type Unit: return value discarded
    return false
    ^Snake:41: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^